# OptigAI

./: README.md  settings.gradle.kts
ModelLearning/item-detection/: main.py  pyproject.toml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: braille_recognition_model.tflite  coco_labels.yaml  keys_labels.yaml
app/src/main/assets/modelLabels/: coco_labels.yaml  keys_labels.yaml
app/src/main/proto/: settings.proto
app/src/main/res/animator/: eyelid_blink.xml  pupil_zoom.xml  scale_animator.xml
app/src/main/res/color/: switch_thumb_selector.xml  switch_track_selector.xml  toggle_border_color_black_bg.xml  toggle_border_color_blue_bg.xml  toggle_border_color_cyan_bg.xml  toggle_border_color_gray_bg.xml  toggle_border_color_green_bg.xml  toggle_border_color_orange_bg.xml  toggle_border_color_purple_bg.xml  toggle_border_color_red_bg.xml  toggle_border_color_white_bg.xml  toggle_border_color_yellow_bg.xml
app/src/main/res/drawable/: analysis_result_box.xml  analysis_selector_button.xml  back_button.xml  background.xml  bg_color_circle.xml  border.xml  button_dim.xml  edit_button.xml  eye_animation.xml  eye_vector.xml  flash_button_background.xml  gallery_button.xml  ic_back_button.xml  ic_edit.xml  ic_eye.xml  ic_flash_auto.xml  ic_flash_off.xml  ic_flash_on.xml  ic_gallery.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_next_button.xml  ic_settings.xml  (+12 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
models/: .gitignore  pyproject.toml
models/item-detection/: key_learning_script.py
(+76 files in other folders)
