[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["JakubJakacki18 <jakub.jakacki18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-core = "^2.1.3"
numpy = "^2.2.0"
pandas = "^2.3.2"
tensorflow = "^2.20.0"
tensorflow-datasets = "^4.9.9"
tensorflow-hub = "^0.16.1"
opencv-python = "^4.12.0.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
