[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["JakubJakacki18 <jakub.jakacki18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
poetry-core = "^2.1.3"
python = "^3.9,<3.10"
tensorflow = "2.8.4"
tflite-model-maker = "0.4.3"
numpy = "1.21.6"
pandas = "1.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
